cmake_minimum_required(VERSION 2.8)
project(cuwavelet)
#find_package(CUDA 5.0 EXACT QUIET REQUIRED)
find_package(CUDA)
INCLUDE(FindCUDA)
add_definitions(-D_USE_GPU_)
include_directories(./)
file(GLOB SRCs "*.cpp")
LIST(APPEND CUDA_NVCC_FLAGS -gencode arch=compute_30,code=compute_30)
file(GLOB_RECURSE HEADERs RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "*.hpp" "*.h")
#file(GLOB_RECURSE CUDAs RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "*.cu")
set(SOURCES ${SRCs} ${HEADERs})
cuda_add_library(libcuwavelet ${SOURCES} "dwtcuda3d.cu")
cuda_add_executable(tescuwavelet ${SOURCES} "testdwtcuda3d.cu")
target_link_libraries(tescuwavelet libcuwavelet)
